# rsocket-rust

./: .gitignore  Cargo.toml  start_benchmark.sh
examples/: Cargo.toml  cli-performance-test.rs  crossbeam-performance-demo.rs  multi-language-ffi-demo.rs  multi-transport-echo-server.rs  quinn-echo-client.rs  quinn-echo-server.rs  test-multi-transport-clients.rs
rsocket/: Cargo.toml
rsocket-c-ffi/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
rsocket-c-ffi/examples/: cpp_client.cpp  example.c  performance_benchmark.c  simple_client.c  transport_demo.c
rsocket-c-ffi/include/: rsocket_c.h  rsocket_cpp.hpp
rsocket-c-ffi/src/: client.rs  lib.rs  payload.rs  performance.rs  server.rs  transport.rs
rsocket-ffi-core/: Cargo.toml
rsocket-ffi-core/src/: lib.rs
rsocket-go-ffi/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  go.mod  rsocket.go
rsocket-go-ffi/example/: main.go
rsocket-go-ffi/examples/: echo-server.go  performance-benchmark.go  simple-client.go
rsocket-go-ffi/go/: rsocket.go
rsocket-go-ffi/src/: client.rs  lib.rs  payload.rs  performance.rs  server.rs  transport.rs
rsocket-go-ffi/tests/: integration_test.rs
rsocket-java-ffi/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
rsocket-java-ffi/examples/: EchoServer.java  PerformanceBenchmark.java  SimpleClient.java
rsocket-java-ffi/java/com/rsocket/rust/: Payload.java  RSocket.java  RSocketClient.java  RSocketServer.java
rsocket-java-ffi/src/: client.rs  lib.rs  payload.rs  performance.rs  server.rs  transport.rs
rsocket-js-ffi/: Cargo.toml  Makefile  README.md  index.d.ts  index.js  package-lock.json  package.json
rsocket-js-ffi/examples/: performance-benchmark.js  simple-echo-test.js
rsocket-js-ffi/src/: client.rs  factory.rs  lib.rs  payload.rs  performance.rs  server.rs  simple_client.rs  transport.rs
rsocket-js-ffi/test/: test.js
rsocket-messaging/: Cargo.toml
rsocket-python-ffi/: .gitignore  Cargo.toml  Makefile  README.md  debug_module.py  pyproject.toml  test_correct_import.py  test_minimal.py  test_top_level_imports.py  test_zero_copy.py
rsocket-python-ffi/examples/: callback_channel_client.py  callback_streaming_client.py  callback_with_completion.py  channel_comparison.py  comprehensive_patterns_test.py  custom_server.py  echo_server.py  enhanced_transports_demo.py  fully_reactive_channel_client.py  iroh_client.py  multi_transport_server.py  reactive_channel_client.py  reactive_stream_server.py  reactive_vs_batch_comparison.py  simple_client.py  simple_client_demo.py  streaming_comparison.py  test_all_patterns.py  test_all_transports.py  test_basic_client.py  test_basic_functionality.py  test_custom_handlers.py  test_iroh_private_key.py  test_multi_transport_server.py  test_reactive_streaming.py  test_server.py  test_true_reactive.py  transport_comparison.py  transport_comparison_ffn.py  transport_comparison_fnf.py  transport_comparison_rr.py  true_reactive_server.py
rsocket-python-ffi/python/: __init__.py
rsocket-python-ffi/python/rsocket_rust/: __init__.py
rsocket-python-ffi/src/: client.rs  factory.rs  lib.rs  payload.rs  performance.rs  py_rsocket.rs  server.rs  transport.rs
rsocket-test/: Cargo.toml
rsocket-transport-iroh/: Cargo.toml  README.md
rsocket-transport-iroh-wasm/: Cargo.toml  README.md
rsocket-transport-iroh-wasm/examples/: iroh-wasm-capability-test.rs  iroh-wasm-echo-client.rs  iroh-wasm-p2p-demo.rs  iroh-wasm-webworkers-test.rs  simple-iroh-wasm-demo.rs
rsocket-transport-iroh-wasm/src/: lib.rs  misc.rs
rsocket-transport-iroh-wasm/src/client/: iroh_wasm.rs  mod.rs
rsocket-transport-iroh-wasm/src/connection/: data_channel.rs  iroh_wasm.rs  mod.rs
rsocket-transport-iroh-wasm/src/webworkers/: iroh_wasm_webworkers.rs  mod.rs  performance.rs  worker_pool.rs
rsocket-transport-iroh-wasm/tests/: integration_tests.rs
rsocket-transport-iroh/examples/: all-patterns-p2p-test.rs  comprehensive-p2p-patterns-test.rs  debug-iroh-handshake.rs  debug-rsocket-frames.rs  debug-rsocket-setup.rs  iroh-echo-client.rs  iroh-echo-server.rs  iroh-p2p-demo.rs  simple-iroh-connection-test.rs  simple-iroh-p2p-test.rs  test-all-patterns-real-iroh.rs
rsocket-transport-iroh/src/: lib.rs  misc.rs
rsocket-transport-iroh/src/client/: iroh.rs  mod.rs
rsocket-transport-iroh/src/connection/: codec.rs  iroh.rs  mod.rs
rsocket-transport-iroh/src/server/: iroh.rs  mod.rs
rsocket-transport-quinn/: Cargo.toml  README.md
rsocket-transport-quinn/examples/: all-patterns-test.rs  debug-test.rs  integration-test.rs  iroh-roq-echo-server.rs  iroh-roq-performance-benchmark.rs  iroh-roq-streaming-demo.rs  simple-test.rs  webtransport-echo-client.rs  webtransport-echo-server.rs
rsocket-transport-quinn/src/: lib.rs  misc.rs
rsocket-transport-quinn/src/client/: mod.rs  quinn.rs
rsocket-transport-quinn/src/connection/: mod.rs  quinn.rs
rsocket-transport-quinn/src/iroh_roq/: client.rs  connection.rs  mod.rs  server.rs  session.rs
rsocket-transport-quinn/src/server/: mod.rs  quinn.rs
rsocket-transport-quinn/src/webtransport/: client.rs  connection.rs  mod.rs  server.rs  tests.rs
rsocket-transport-tcp/: Cargo.toml
rsocket-transport-wasm/: Cargo.toml  README.md
rsocket-transport-wasm/examples/: advanced-webworkers-benchmark.rs  webworkers-echo-client.rs  webworkers-performance-benchmark.rs
rsocket-transport-wasm/src/: client.rs  lib.rs
rsocket-transport-wasm/src/webworkers/: client.rs  memory_pool.rs  mod.rs  performance.rs  shared_buffer.rs  simd_optimizations.rs  simple_wasm.rs  wasm_compat.rs  wasm_only.rs  wasm_traits.rs  worker.rs
rsocket-transport-websocket/: Cargo.toml
rsocket/benches/: crossbeam_performance.rs
rsocket/src/: error.rs  lib.rs
rsocket/src/core/: factory.rs  mod.rs  multi_transport_server.rs  server.rs
rsocket/src/transport/: capability.rs  crossbeam_integration.rs  crossbeam_socket.rs  crossbeam_tests.rs  logging.rs  misc.rs  mod.rs  platform.rs  simd_frame_processing.rs  socket.rs  tests.rs
