[workspace]
resolver = "2"

members = [
  "rsocket",
  "rsocket-transport-tcp",
  "rsocket-transport-websocket",
  "rsocket-transport-wasm",
  "rsocket-messaging",
  "examples",
  "rsocket-test",
  # P1U07 Multi-language FFI bindings
  "rsocket-ffi-core",
  "rsocket-python-ffi",
  "rsocket-js-ffi",
  "rsocket-c-ffi",
  "rsocket-go-ffi",
]
