[package]
name = "examples"
version = "0.0.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
publish = false

[dev-dependencies]
log = "0.4.14"
env_logger = "0.8.3"
futures = "0.3.15"
clap = "2.33.3"
pprof = { version = "0.4.3", features = ["flamegraph"] }

[dev-dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"

[dev-dependencies.rsocket_rust_transport_tcp]
path = "../rsocket-transport-tcp"
version = "0.7"
features = ["tls"]

[dev-dependencies.rsocket_rust_transport_websocket]
path = "../rsocket-transport-websocket"
version = "0.7"

[dev-dependencies.rsocket_rust_transport_quinn]
path = "../rsocket-transport-quinn"

[dev-dependencies.tokio]
version = "1.0.3"
default-features = false
features = ["full"]

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "proxy"
path = "proxy.rs"

[[example]]
name = "cli"
path = "cli.rs"

[[example]]
name = "qps"
path = "qps.rs"

[[example]]
name = "tls-server"
path = "tls/server.rs"

[[example]]
name = "tls-client"
path = "tls/client.rs"

[[example]]
name = "quinn-echo-server"
path = "quinn-echo-server.rs"

[[example]]
name = "quinn-echo-client"
path = "quinn-echo-client.rs"
