[package]
name = "examples"
version = "0.0.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
publish = false

[dev-dependencies]
log = "0.4.14"
env_logger = "0.8.3"
futures = "0.3.15"
clap = "2.33.3"
anyhow = "1.0"
pprof = { version = "0.4.3", features = ["flamegraph"] }

[dev-dependencies.rsocket_rust]
path = "../rsocket"
version = "0.8"

[dev-dependencies.rsocket_rust_transport_tcp]
path = "../rsocket-transport-tcp"
version = "0.8"
features = ["tls"]

[dev-dependencies.rsocket_rust_transport_websocket]
path = "../rsocket-transport-websocket"
version = "0.8"

[dev-dependencies.rsocket_rust_transport_quinn]
path = "../rsocket-transport-quinn"

[dev-dependencies.rsocket_rust_transport_iroh]
path = "../rsocket-transport-iroh"

[dev-dependencies.tokio]
version = "1.0.3"
default-features = false
features = ["full"]

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "proxy"
path = "proxy.rs"

[[example]]
name = "cli"
path = "cli.rs"

[[example]]
name = "cli-performance-test"
path = "cli-performance-test.rs"

[[example]]
name = "qps"
path = "qps.rs"

[[example]]
name = "tls-server"
path = "tls/server.rs"

[[example]]
name = "tls-client"
path = "tls/client.rs"

[[example]]
name = "quinn-echo-server"
path = "quinn-echo-server.rs"

[[example]]
name = "quinn-echo-client"
path = "quinn-echo-client.rs"

[[example]]
name = "multi-transport-echo-server"
path = "multi-transport-echo-server.rs"

[[example]]
name = "test-multi-transport-clients"
path = "test-multi-transport-clients.rs"
