[package]
name = "rsocket_rust_ffi_core"
version = "0.7.4"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hey-emir-kaan/rsocket-rust"
homepage = "https://github.com/hey-emir-kaan/rsocket-rust"
description = "Unified FFI core for RSocket Rust multi-language bindings"

[features]
default = []

[dependencies]
log = "0.4.14"
futures = "0.3.15"
bytes = "1.0.1"
tokio = { version = "1.0.3", features = ["rt", "rt-multi-thread", "net", "sync", "io-util", "macros"] }

[dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]

# Transport dependencies - only include existing ones
[dependencies.rsocket_rust_transport_tcp]
path = "../rsocket-transport-tcp"
version = "0.7"

[dependencies.rsocket_rust_transport_websocket]
path = "../rsocket-transport-websocket"
version = "0.7"

[dependencies.rsocket_rust_transport_wasm]
path = "../rsocket-transport-wasm"
version = "0.7"
