[package]
name = "rsocket_rust_js_ffi"
version = "0.7.4"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "JavaScript/Node.js FFI bindings for RSocket Rust implementation."

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
napi = { version = "2.14", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2.14"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "sync", "io-util", "macros"] }
futures = "0.3"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

[dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]

[dependencies.rsocket_rust_transport_tcp]
path = "../rsocket-transport-tcp"
version = "0.7"

[dependencies.rsocket_rust_transport_websocket]
path = "../rsocket-transport-websocket"
version = "0.7"

# Transport dependencies - only include existing packages
# [dependencies.rsocket_rust_transport_quinn]
# path = "../rsocket-transport-quinn"
# version = "0.7"

# [dependencies.rsocket_rust_transport_iroh]
# path = "../rsocket-transport-iroh"
# version = "0.7"

# [dependencies.rsocket_rust_transport_wasm]
# path = "../rsocket-transport-wasm"
# version = "0.7"

[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = true
