[package]
name = "rsocket_rust_python_ffi"
version = "0.8.0"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hey-emir-kaan/rsocket-rust"
homepage = "https://github.com/hey-emir-kaan/rsocket-rust"
description = "Python FFI bindings for RSocket Rust with TCP and WebSocket transport support"

[lib]
name = "rsocket_rust"
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
anyhow = "1.0"

[dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]

[dependencies.rsocket_rust_transport_tcp]
path = "../rsocket-transport-tcp"
version = "0.7"

[dependencies.rsocket_rust_transport_websocket]
path = "../rsocket-transport-websocket"
version = "0.7"

[build-dependencies]
pyo3-build-config = "0.20"
