[package]
name = "rsocket-python-ffi"
version = "0.8.0"
edition = "2021"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
license = "Apache-2.0"
description = "Python FFI bindings for RSocket Rust implementation"
repository = "https://github.com/hey-emir-kaan/rsocket-rust"

[lib]
name = "rsocket_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
log = "0.4"
bytes = "1.0"
async-stream = "0.3"
async-trait = "0.1"

[dependencies.rsocket_rust]
path = "../rsocket"
version = "0.8"

[dependencies.rsocket_rust_transport_tcp]
path = "../rsocket-transport-tcp"
version = "0.8"

[dependencies.rsocket_rust_transport_websocket]
path = "../rsocket-transport-websocket"
version = "0.8"

[dependencies.rsocket_rust_transport_quinn]
path = "../rsocket-transport-quinn"
version = "0.8"

[dependencies.rsocket_rust_transport_iroh]
path = "../rsocket-transport-iroh"
version = "0.8"
