[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rsocket-rust"
version = "0.8.0"
description = "Python bindings for RSocket Rust implementation"
authors = [
    {name = "Devin AI", email = "devin-ai-integration[bot]@users.noreply.github.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["rsocket", "reactive", "streaming", "networking", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/hey-emir-kaan/rsocket-rust"
Repository = "https://github.com/hey-emir-kaan/rsocket-rust"
Documentation = "https://github.com/hey-emir-kaan/rsocket-rust/blob/master/README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rsocket_rust"
