[package]
name = "rsocket_rust_transport_iroh"
version = "0.7.4"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "P2P RSocket transport implementation using Quinn QUIC."

[features]
default = []

[dependencies]
log = "0.4.14"
futures = "0.3.15"
bytes = "1.0.1"
quinn = "0.11"
rustls = "0.23"
rcgen = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0.3", default-features = false, features = ["rt", "rt-multi-thread", "net", "sync", "io-util", "macros", "fs"] }
tokio-util = { version = "0.6.6", default-features = false, features = ["codec"] }

[dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]

[dev-dependencies]
env_logger = "0.8.3"

[[example]]
name = "iroh-echo-server"
path = "examples/iroh-echo-server.rs"

[[example]]
name = "iroh-echo-client"
path = "examples/iroh-echo-client.rs"

[[example]]
name = "all-patterns-p2p-test"
path = "examples/all-patterns-p2p-test.rs"
