[package]
name = "rsocket_rust_transport_quinn"
version = "0.7.4"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "Quinn QUIC RSocket transport implementation."

[features]
default = []

[dependencies]
log = "0.4.14"
futures = "0.3.15"
bytes = "1.0.1"
quinn = "0.11"
rustls = "0.23"
rcgen = "0.12"

[dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]

[dependencies.tokio]
version = "1.0.3"
default-features = false
features = [ "rt", "rt-multi-thread", "net", "sync", "io-util", "macros" ]

[dependencies.tokio-util]
version = "0.6.6"
default-features = false
features = ["codec"]

[dev-dependencies]
env_logger = "0.8.3"

[[example]]
name = "simple-test"
path = "examples/simple-test.rs"

[[example]]
name = "integration-test"
path = "examples/integration-test.rs"
