[package]
name = "rsocket_rust_transport_quinn"
version = "0.7.4"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "Quinn QUIC RSocket transport implementation."

[features]
default = []
webtransport = ["web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]
iroh-roq = ["dep:iroh-roq", "dep:rtp", "dep:iroh", "dep:anyhow"]

[dependencies]
log = "0.4.14"
futures = "0.3.15"
bytes = "1.0.1"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
quinn = "0.11"
rustls = "0.23"
rcgen = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", optional = true, features = [
  "WebTransport",
  "ReadableStream", 
  "WritableStream",
  "ReadableStreamDefaultReader",
  "WritableStreamDefaultWriter",
  "console",
] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[dependencies.iroh-roq]
version = "0.1"
optional = true

[dependencies.rtp]
version = "0.12"
optional = true

[dependencies.iroh]
version = "0.33"
optional = true

[dependencies.anyhow]
version = "1.0"
optional = true


[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1.0.3"
default-features = false
features = [ "rt", "rt-multi-thread", "net", "sync", "io-util", "macros" ]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio-util]
version = "0.6.6"
default-features = false
features = ["codec"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]
default-features = false

[target.'cfg(target_arch = "wasm32")'.dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]
default-features = false

[dev-dependencies]
env_logger = "0.8.3"

[[example]]
name = "simple-test"
path = "examples/simple-test.rs"

[[example]]
name = "integration-test"
path = "examples/integration-test.rs"

[[example]]
name = "debug-test"
path = "examples/debug-test.rs"

[[example]]
name = "all-patterns-test"
path = "examples/all-patterns-test.rs"
