[package]
name = "rsocket_rust_transport_wasm"
version = "0.7.4"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "WASM Websocket RSocket transport implementation with WebWorkers support."

[features]
default = []
webworkers = ["web-sys/Worker", "web-sys/MessagePort", "web-sys/DedicatedWorkerGlobalScope"]
wasm-only = ["webworkers"]

[dependencies]
bytes = "1.0.1"
wasm-bindgen-futures = "0.4.24"
futures-channel = "0.3.15"
futures-util = { version = "0.3.15", features = ["sink"] }
js-sys = "0.3.51"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0"
log = "0.4.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]

[target.'cfg(all(target_arch = "wasm32", not(feature = "wasm-only")))'.dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]
default-features = false

[dependencies.wasm-bindgen]
version = "0.2.74"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.51"
features = [
  "FileReader",
  "ProgressEvent",
  "Blob",
  "BlobPropertyBag",
  "ErrorEvent",
  "MessageEvent",
  "WebSocket",
  "Event",
  "Worker",
  "MessagePort",
  "DedicatedWorkerGlobalScope",
  "Navigator",
  "Window",
  "Url",
  "console",
  "Performance",
  "BinaryType",
  "CloseEvent",
]



[target.'cfg(not(target_arch = "wasm32"))'.dependencies.futures-executor]
version = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.anyhow]
version = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.anyhow]
version = "1.0"
default-features = false
