[package]
name = "rsocket_rust"
version = "0.8.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "rsocket-rust is an implementation of the RSocket protocol in Rust."

[dependencies]
log = "0.4"
bytes = "1.0"
futures = "0.3"
once_cell = "1.19"
async-trait = "0.1"
dashmap = "6.0"
thiserror = "1.0"
anyhow = "1.0"
async-stream = "0.3"
cfg-if = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dependencies.tokio]
version = "1.0"
default-features = false
features = [ "macros", "rt", "rt-multi-thread", "sync", "time" ]

[dependencies.tokio-stream]
version = "0.1"
features = ["sync"]

[features]
default = []
frame = []
