[package]
name = "rsocket_rust"
version = "0.7.5"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "rsocket-rust is an implementation of the RSocket protocol in Rust."

[dependencies]
log = "0.4.14"
bytes = "1.0.1"
once_cell = "1.7.2"
async-trait = "0.1.50"
thiserror = "1.0.24"
anyhow = "1.0.40"
async-stream = "0.3.1"
cfg-if = "1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3.15"
dashmap = "5.3.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.24"
futures = { version = "0.3.15", default-features = false, features = ["alloc", "async-await"] }
dashmap = { version = "5.3.4", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1.0.3"
default-features = false
features = [ "macros", "rt", "rt-multi-thread", "sync", "time" ]

[target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
version = "1.0.3"
default-features = false
features = [ "sync", "macros", "io-util", "rt", "time" ]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio-stream]
version = "0.1.7"
features = ["sync"]

[target.'cfg(target_arch = "wasm32")'.dependencies.tokio-stream]
version = "0.1.7"
default-features = false
features = []

[features]
default = []
frame = []
wasm = []
